--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
 
   celery:
     build: ./project
-    command: celery worker --app=core --loglevel=info --logfile=logs/celery.log
+    command: celery -A core worker --loglevel=info --logfile=logs/celery.log
     volumes:
       - ./project:/usr/src/app
     environment:
@@ -34,7 +34,7 @@ services:
 
   dashboard:
     build: ./project
-    command: flower -A core --port=5555 --broker=redis://redis:6379/0
+    command: celery flower -A core --port=5555 --broker=redis://redis:6379/0
     ports:
       - 5555:5555
     environment:
